NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/bcrtsng.cla
version https://git-lfs.github.com/spec/v1
oid sha256:23ab92ba9ff4850af412bfbd64758d4b3c6b79e50d615c6c12c6dbe98c47a6a0
size 5670
